--- a/render.yaml
+++ b/render.yaml
@@ -65,7 +65,6 @@ services:
         fromDatabase:
           name: DB Production
           property: connectionString
-
     autoDeploy: true
 
   - type: web
@@ -76,12 +75,65 @@ services:
     rootDir: .
 
     envVars:
-      - fromGroup: Production
+      - fromGroup: Staging
     buildCommand: npm run build:site
     staticPublishPath: apps/site/dist/client
     autoDeploy: true
     domains:
       - staging.hearyebot.com
+
+  - type: web
+    name: API Staging
+    env: node
+    repo: https://github.com/msaspence/hearye
+    buildCommand: npm run sentry:release:new --workspace @hearye/api && DEBUG=* npm ci --production=false && npm run migrate && npm run build:api && npm run sentry:release:finalize --workspace @hearye/api
+    buildFilter:
+      paths:
+        - apps/api/**/*
+        - packages/**/*
+      ignoredPaths:
+        - apps/reminder-runner/**/*
+    startCommand: npm run sentry:release:deploy --workspace @hearye/api && DEBUG=* npm run start:api
+    healthCheckPath: /
+    region: oregon
+    plan: free
+    branch: main
+    rootDir: .
+    numInstances: 1
+    envVars:
+      - fromGroup: Staging
+      - key: DATABASE_URL
+        fromDatabase:
+          name: DB Staging
+          property: connectionString
+    autoDeploy: true
+    domains:
+      - api.hearyebot.com
+
+  - type: worker
+    name: Reminder Runner Staging
+    env: node
+    repo: https://github.com/msaspence/hearye
+    buildCommand: npm run sentry:release:new --workspace @hearye/reminder-runner && DEBUG=* npm ci --production=false && npm run build:reminder-runner && npm run sentry:release:finalize --workspace @hearye/reminder-runner
+    buildFilter:
+      paths:
+        - apps/reminder-runner/**/*
+        - packages/**/*
+      ignoredPaths:
+        - apps/api/**/*
+    startCommand: npm run sentry:release:deploy --workspace @hearye/reminder-runner && DEBUG=* npm run start:reminder-runner
+    region: oregon
+    plan: starter
+    branch: main
+    rootDir: .
+    numInstances: 1
+    envVars:
+      - fromGroup: Staging
+      - key: DATABASE_URL
+        fromDatabase:
+          name: DB Staging
+          property: connectionString
+    autoDeploy: true
 
 databases:
   - name: DB Production
